chatroom members POST working
