# transcendence-app/src/chat/chat.controller.ts
@@ -2,6 +2,8 @@ import {
   Body,
   Controller,
   Get,
+  Param,
+  ParseUUIDPipe,
   Post,
   Query,
   ServiceUnavailableException,
@@ -25,13 +27,17 @@ import { CreateChatDto } from './dto/create-chat.dto';
 import { User } from '../user/user.domain';
 import { User as GetUser } from '../user/decorators/user.decorator';
 import { ChatsPaginationQueryDto } from './dto/chat.pagination.dto';
+import { ChatMemberService } from './chatmember.service';
 
 @Controller('chatroom')
 @UseGuards(AuthenticatedGuard)
 @ApiTags('chatroom')
 @ApiForbiddenResponse({ description: 'Forbidden' })
 export class ChatController {
-  constructor(private chatService: ChatService) {}
+  constructor(
+    private chatService: ChatService,
+    private chatMemberService: ChatMemberService,
+  ) {}
 
   @Post()
   @ApiCreatedResponse({ description: 'Create a chatroom', type: Chat })
@@ -47,6 +53,25 @@ export class ChatController {
       throw new UnprocessableEntityException();
     }
     return chat;
+  }
+
+  @Post(':chatId')
+  @ApiCreatedResponse({ description: 'Add a member to a chatroom', type: Chat })
+  @ApiBadRequestResponse({ description: 'Bad Request' })
+  @ApiUnprocessableEntityResponse({ description: 'Unprocessable entity' })
+  async createChatRoomMember(
+    @GetUser() user: User,
+    @Param('chatId', ParseUUIDPipe) chatId: string,
+  ) {
+    const ret = await this.chatMemberService.addChatmember({
+      chatId: chatId,
+      userId: user.id,
+    });
+
+    if (!ret) {
+      throw new UnprocessableEntityException();
+    }
+    return ret;
   }
 
   @Get()
